--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: xmlview
 Type: Package
-Title: xFormat and Pretty Print 'HTML'/'XML' Content
+Title: View, Query, Format, and "Pretty Print" 'HTML'/'XML' Content
 Version: 0.3.0
 Date: 2016-01-13
 Author: Bob Rudis (@hrbrmstr)
@@ -9,7 +9,7 @@ Description: Provides utilities to view formatted and "pretty printed" HTML/XML
     content from XML document objects, nodes, node sets and plain character
     HTML/XML using 'vkbeautify' (by Vadim Kiryukhin) and 'highlight.js'
     (by Ivan Sagalaev). Also optionally enables filtering of nodes via XPath or
-    viewing an XML document in "tree" view.
+    viewing an XML document in "tree" view using 'xml-viewer' (by Julian Gruber).
 URL: http://github.com/hrbrmstr/xmlview
 BugReports: https://github.com/hrbrmstr/xmlview/issues
 License: MIT + file LICENSE
