--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,10 +6,10 @@ Date: 2016-01-13
 Author: Bob Rudis (@hrbrmstr)
 Maintainer: Bob Rudis <bob@rudis.net>
 Description: Provides utilities to view formatted and "pretty printed" HTML/XML
-    content from XML document objects, nodes, node sets and plain character
-    HTML/XML using 'vkbeautify' (by Vadim Kiryukhin) and 'highlight.js'
-    (by Ivan Sagalaev). Also optionally enables filtering of nodes via XPath or
-    viewing an XML document in "tree" view using 'xml-viewer' (by Julian Gruber).
+    content from XML document objects, nodes, node sets and plain character HTML/XML
+    using 'vkbeautify' (by Vadim Kiryukhin) and 'highlight.js' (by Ivan Sagalaev).
+    Also optionally enables filtering of nodes via XPath or viewing an XML document
+    in "tree" view using 'xml-viewer' (by Julian Gruber).
 URL: http://github.com/hrbrmstr/xmlview
 BugReports: https://github.com/hrbrmstr/xmlview/issues
 License: MIT + file LICENSE
@@ -21,4 +21,4 @@ Imports:
     htmlwidgets,
     htmltools,
     xml2
-RoxygenNote: 4.1.1.9001
+RoxygenNote: 5.0.1
