--- a/inst/htmlwidgets/xmlview.yaml
+++ b/inst/htmlwidgets/xmlview.yaml
@@ -2,8 +2,9 @@ dependencies:
 - name: highlightjs
   version: 9.0.0
   src: htmlwidgets/lib/highlightjs
-  script: ./highlight.pack.min.js
+  script: highlight.pack.min.js
 - name: vkbeautify
   version: 0.99.00
   src: htmlwidgets/lib/vkbeautify
-  script: ./vkbeautify.js
+  script: vkbeautify.js
+  stylesheet: wdgt.css
